--- a/frontend/src/LoginForm.css
+++ b/frontend/src/LoginForm.css
@@ -213,4 +213,18 @@ body {
     border: none;
     cursor: pointer;
   }
+  .resend-code-link a {
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #a48ef6;
+    text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .resend-code-link a:hover {
+    text-decoration: underline;
+  }
+
   
