--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -195,6 +195,7 @@ form .form-group {
 form label {
   display: block;
   margin-bottom: 5px;
+  text-align: left;
 }
 
 form input,
@@ -205,11 +206,13 @@ form button {
 }
 
 form button {
+  width: fit-content;
   background-color: #b1a1ed;
   color: black;
   border: none;
   border-radius: 24px;
   cursor: pointer;
+  align-self: center;
 }
 
 button {
@@ -218,6 +221,13 @@ button {
   color: #b1a1ed;
   cursor: pointer;
   font-size: 16px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+}
+
+button:hover{
+  cursor: pointer;
+  background-color: #a88afc;
 }
 
 /* Forgot Password */
