--- a/fempredict/fempredict/src/styles/Chatbot.css
+++ b/fempredict/fempredict/src/styles/Chatbot.css
@@ -112,6 +112,10 @@
     padding: 8px;
     margin-left: 10px;
   }
+
+  .chatbot-input button:hover {
+    background-color: transparent;
+  }
   
   .chatbot-input button img {
     width: 20px;
