--- a/fempredict/fempredict/src/styles/Testimonials.css
+++ b/fempredict/fempredict/src/styles/Testimonials.css
@@ -1,13 +1,13 @@
 .testimonials-section {
-  background-color: #f9f9f9;
+  background-color: #26c6da;
   padding: 50px 20px;
   text-align: center;
   font-family: 'Arial', sans-serif;
 }
 
-h2 {
+.testimonials-section h2 {
   font-size: 2.5rem;
-  color: #333;
+  color: black;
   margin-bottom: 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
