--- a/fempredict/fempredict/src/styles/ExerciseRecommender.css
+++ b/fempredict/fempredict/src/styles/ExerciseRecommender.css
@@ -3,6 +3,7 @@
     font-family: 'Poppins', sans-serif;
     max-width: 800px;
     margin: 0 auto;
+    background-color: white;
   }
   
   .recommender-topic {
@@ -70,7 +71,7 @@
   }
   
   .submit-button {
-    width: 100%;
+    width: 50%;
     padding: 12px;
     font-size: 18px;
     background-color: #007bff;
