--- a/fempredict/fempredict/src/styles/PCOSRiskCalculator.css
+++ b/fempredict/fempredict/src/styles/PCOSRiskCalculator.css
@@ -6,7 +6,7 @@
   
   body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: white;
     padding: 20px;
   }
   
