Updated application to be accessible

--- a/Period Tracker/fempredict/frontend/src/styles/Chatbot.css
+++ b/Period Tracker/fempredict/frontend/src/styles/Chatbot.css
@@ -12,7 +12,7 @@
   }
   
   .chatbot-header {
-    background-color: #007bff;
+    background-color: #00157c;
     color: white;
     padding: 15px;
     font-size: 18px;
