--- a/Period Tracker/fempredict/frontend/src/styles/Profile.css
+++ b/Period Tracker/fempredict/frontend/src/styles/Profile.css
@@ -38,7 +38,7 @@ h3 {
 }
 
 .card-button {
-  background-color: #007bff; /* Green background */
+  background-color: #00157c; /* Green background */
   color: white;
   border: none;
   padding: 10px 20px;
