--- a/Period Tracker/fempredict/frontend/src/styles/Button.css
+++ b/Period Tracker/fempredict/frontend/src/styles/Button.css
@@ -2,7 +2,7 @@
 .btn {
     padding: 10px 20px;
     border: none;
-    background-color: #007bff;
+    background-color: #00157c;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -10,9 +10,6 @@
     transition: background-color 0.3s;
   }
   
-  .btn:hover {
-    background-color: #0056b3;
-  }
   
   .btn:disabled {
     background-color: #cccccc;
