--- a/Period Tracker/fempredict/frontend/src/styles/ExerciseRecommender.css
+++ b/Period Tracker/fempredict/frontend/src/styles/ExerciseRecommender.css
@@ -74,7 +74,7 @@
     width: 50%;
     padding: 12px;
     font-size: 18px;
-    background-color: #007bff;
+    background-color: #00157c;
     color: white;
     border: none;
     border-radius: 4px;
