--- a/Period Tracker/fempredict/frontend/src/styles/Modal.css
+++ b/Period Tracker/fempredict/frontend/src/styles/Modal.css
@@ -20,11 +20,24 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.modal-content h2{
+  color: #00157c;
+}
+
 .modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
+.terms-privacy a {
+  color: #00157c;
+}
+
+.terms-privacy a:hover {
+  text-decoration: underline;
+}
+
 
 .modal-header h2 {
   margin: 0;
@@ -62,7 +75,7 @@
 
 button {
   padding: 10px;
-  background-color: #007bff;
+  background-color: #00157c;
   color: white;
   border: none;
   border-radius: 4px;
@@ -80,7 +93,7 @@ button:hover {
 }
 
 .toggle-link {
-  color: #007bff;
+  color: #00157c;
   cursor: pointer;
 }
 
@@ -101,16 +114,16 @@ button:hover {
 
 /* Success message */
 .message.success {
-  background-color: #4caf50; /* Green */
+  background-color: white; /* Green */
   color: white;
-  border: 1px solid #388e3c; /* Darker green */
+  border: 3px solid #388e3c; /* Darker green */
 }
 
 /* Error message */
 .message.error {
-  background-color: #f44336; /* Red */
-  color: white;
-  border: 1px solid #d32f2f; /* Darker red */
+  background-color: white; /* Red */
+  color: black;
+  border: 3px solid #d32f2f; /* Darker red */
 }
 
 
